--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ gtk-api.xml: $(srcdir)/gtk-api.raw $(srcdir)/Gtk.metadata
 
 gtk_generated/Builder.cs: gtk-api.xml $(GTK_CUSTOMS)
 	@echo -e "\n*** Generating C# code"
-	gapi2-codegen $(GLIBSHARP_CFLAGS) --outdir=gtk_generated --customdir=$(srcdir) --generate gtk-api.xml
+	gapi2-codegen $(GLIBSHARP_CFLAGS) --outdir=gtk_generated --customdir=$(srcdir)/Gtk.Customs --generate gtk-api.xml
 
 gtk-sharp-beans.dll: $(srcdir)/gtk_generated/Builder.cs $(SRCS)
 	@echo -e "\n*** Building $@"
