add an overload to Drawable/DrawRgbImageDithalign that takes a byte* as pixel buffer

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,8 @@ GLIB_SRCS =					\
 	$(srcdir)/GLib.Sources/Timeout.cs
 
 GDK_SRCS =					\
-	$(srcdir)/Gdk.Sources/PixbufFormat.cs
+	$(srcdir)/Gdk.Sources/PixbufFormat.cs	\
+	$(srcdir)/Gdk.Sources/Drawable.cs
 
 SRCS =						\
 	$(srcdir)/AssemblyInfo.cs		\
