PixbufLoader.Close (bool force) overload
this overload avoid throwing an exception if force is true. That exception is meaningless is we want to force close the loader in order to dispose it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,7 @@ GLIB_SRCS =					\
 
 GDK_SRCS =					\
 	$(srcdir)/Gdk.Sources/PixbufFormat.cs	\
+	$(srcdir)/Gdk.Sources/PixbufLoader.cs	\
 	$(srcdir)/Gdk.Sources/Drawable.cs
 
 SRCS =						\
