--- a/gtk-sharp-beans-2.0.pc.in
+++ b/gtk-sharp-beans-2.0.pc.in
@@ -7,7 +7,7 @@ gapidir=${prefix}/share/gapi-2.0
 Name: Gtk#Beans
 Description: Gtk#Beans - Blings and API missing from Gtk#
 Version: @VERSION@
-Cflags: -I:${gapidir}/gio-api.xml
+Cflags: -I:${gapidir}/gtk-api.xml -I:$(gapidir)/gtkbeans-api.xml
 Libs: -r:${assemblies_dir}/gtk-sharp-beans.dll
 Requires: glib-sharp-2.0 gtk-sharp-2.0
 
