--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,6 @@ GDK_SRCS =					\
 	$(srcdir)/Gdk.Sources/Drawable.cs
 
 SRCS =						\
-	$(srcdir)/AssemblyInfo.cs		\
 	$(GLIB_SRCS)				\
 	$(GTK_SRCS)				\
 	$(GDK_SRCS)
@@ -55,9 +54,9 @@ gtk_generated/Builder.cs: gtk-api.xml gtkbeans-api.xml $(GTK_CUSTOMS)
 	gapi2-codegen $(GLIBSHARP_CFLAGS) --outdir=gtk_generated --customdir=$(srcdir)/Gtk.Customs --generate gtkbeans-api.xml
 	gapi2-codegen $(GLIBSHARP_CFLAGS) $(GTKSHARP_CFLAGS) $(GIOSHARP_CFLAGS) --outdir=gtk_generated --customdir=$(srcdir)/Gtk.Customs --generate gtk-api.xml
 
-gtk-sharp-beans.dll: $(srcdir)/gtk_generated/Builder.cs $(SRCS)
+gtk-sharp-beans.dll: $(builddir)/gtk_generated/Builder.cs $(SRCS) AssemblyInfo.cs
 	@echo -e "\n*** Building $@"
-	$(CSC) -target:library -out:$@ $(CSC_DEFINES) $(UNSAFE) $(DEBUG) $(ASSEMBLIES) $(SRCS) $(srcdir)/gtk_generated/*.cs
+	$(CSC) -target:library -out:$@ $(CSC_DEFINES) $(UNSAFE) $(DEBUG) $(ASSEMBLIES) $(SRCS) AssemblyInfo.cs $(builddir)/gtk_generated/*.cs
 
 beansdir = $(prefix)/lib/gtk-sharp-beans
 beans_DATA = gtk-sharp-beans.dll gtk-sharp-beans.dll.mdb
@@ -71,11 +70,19 @@ pkgconfig_DATA = gtksharp-beans-2.0.pc
 CLEANFILES = 			\
 	gtk-sharp-beans.dll 	\
 	gtk-sharp-beans.dll.mdb \
-	gtk-api.xml
+	gtk-api.xml \
+	gtkbeans-api.xml
+
+DISTCLEANFILES = \
+    AssemblyInfo.cs \
+    gtk_generated/*.cs
+
+MAINTAINERCLEANFILES = Makefile.in
 
 EXTRA_DIST =			\
 	$(SRCS)			\
 	$(GTK_CUSTOMS)		\
+	AssemblyInfo.cs.in \
 	sources/Makefile.am \
 	sources/Makefile.in \
 	GtkBeans.metadata   \
