Update for 2.14.0 release

--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(gtk-sharp-beans, 2.13.92, stephane@delcroix.org)
+AC_INIT(gtk-sharp-beans, 2.14.0, stephane@delcroix.org)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR(AssemblyInfo.cs.in)
 
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([dist-bzip2 tar-ustar])
 
 PACKAGE_VERSION=gtk-sharp-beans-2.0
 AC_SUBST(PACKAGE_VERSION)
