--- a/gtk-sharp-beans-2.0.pc.in
+++ b/gtk-sharp-beans-2.0.pc.in
@@ -3,7 +3,7 @@ exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 assemblies_dir=${libdir}/gtk-sharp-beans
 gapidir=${prefix}/share/gapi-2.0
-Libraries=${assemblies_dir}/gtk-sharp-beans.dll ${assemblies_dir}/gtk-sharp-beans.dll.mdb
+Libraries=${assemblies_dir}/gtk-sharp-beans.dll
 
 Name: Gtk#Beans
 Description: Gtk#Beans - Blings and API missing from Gtk#
