build: Use variables from PKG_CHECK_MODULES instead of -pkg
The -pkg compiler option doesn't follow the PKG_CONFIG_PATH environment
variable, causing errors in some build environment, like bockbuild or
possibly jhbuild. Use the variables set by the various PKG_CHECK_MODULES
calls instead.

--- a/configure.ac
+++ b/configure.ac
@@ -20,8 +20,11 @@ AC_SUBST(GACUTIL)
 AC_SUBST(GACUTIL_FLAGS)
 
 PKG_CHECK_MODULES(GTKSHARP, gtk-sharp-2.0 >= 2.12)
+AC_SUBST(GTKSHARP_LIBS)
 PKG_CHECK_MODULES(GLIBSHARP, glib-sharp-2.0 >= 2.12)
+AC_SUBST(GLIBSHARP_LIBS)
 PKG_CHECK_MODULES(GIOSHARP, gio-sharp-2.0 >= 2.18)
+AC_SUBST(GIOSHARP_LIBS)
 PKG_CHECK_MODULES(GAPI, gapi-2.0 >= 2.12.0)
 
 CSC_DEFINES=""
