--- a/Makefile.am
+++ b/Makefile.am
@@ -31,9 +31,9 @@ SRCS =						\
 	$(GDK_SRCS)
 
 ASSEMBLIES =					\
-	-pkg:glib-sharp-2.0			\
-	-pkg:gio-sharp-2.0			\
-	-pkg:gtk-sharp-2.0
+	$(GLIBSHARP_LIBS)			\
+	$(GIOSHARP_LIBS)			\
+	$(GTKSHARP_LIBS)
 
 all: gtk-sharp-beans.dll
 
